[package]
name = "solana-staking-app"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "1.4.0"
borsh-derive = "1.4.0"
solana-program = "1.14.5"
thiserror = "1.0.37"

[dev-dependencies]
solana-logger = "1.14.5"
solana-program-test = "1.14.5"
solana-sdk = "1.14.5"
solana-validator = "1.14.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[lib]
name = "stakingapp"
crate-type = ["cdylib", "lib"]